JavaFX GUI skeleton, mirroring TUI architecture
Split events into shared client/view/events/ (server-derived) and
client/view/tui/events/ (input). Server events extend a new ServerEvent
base providing both accept(EventVisitor) for the TUI and
accept(GUIEventVisitor) for the GUI.

Add the GUI side-by-side with the TUI: GUIScreen abstract base with
default routing through GUIEventVisitor, plus 8 concrete JavaFX screens
(FXML controllers) mirroring the TUI flow — Connecting, Login, Home,
Lobby, Game, EndGame, Disconnected, Exit. The GUI class implements
GameUI, drives transitions via Platform.runLater so server callbacks
land safely on the JavaFX Application Thread.

pom.xml: JavaFX 21 LTS multi-classifier (win/linux/mac/mac-aarch64) so
the shaded jar runs cross-platform; src/assets/ added as a Maven
resource under /assets for fonts and PNGs.

App.java: --gui mode wired up, plus a parallel --test-gui mode for an
in-process FakeServerConnection smoke test.

README updated with the GUI launch examples.